Configuracion de Dominio

--- a/proyecto/Web.config
+++ b/proyecto/Web.config
@@ -9,14 +9,14 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ActiveDirectoryServidor" value="alphadom" />
+    <add key="ActiveDirectoryServidor" value="alphasys.bo" />
     <add key="ActiveDirectoryPuerto" value="0000" />
     <add key="CorreoServidorIP" value="webmail.alphasys.com.bo" />
     <add key="CorreoServidorPuerto" value="25" />
     <add key="CorreoElectronicoSistema" value="alpha@alphasys.com.bo" />
   </appSettings>
   <connectionStrings>
-    <add name="SQLConnection" connectionString="server=10.1.4.191;database=DEVELOPER_ASSISTANT;user id=sa;password=Alpha123" />
+    <add name="SQLConnection" connectionString="server=10.1.4.191;database=atm;user id=AlphaDesarrolloKioscos;password=AlphaDesarrolloKioscos" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
