Configuración a MySQL funcionando

--- a/proyecto/Web.config
+++ b/proyecto/Web.config
@@ -17,7 +17,7 @@
   </appSettings>
   <connectionStrings>
     <add name="SQLConnection" connectionString="server=10.1.4.191;database=atm;user id=AlphaDesarrolloKioscos;password=AlphaDesarrolloKioscos" />
-    <add name="MYSQLConnection" connectionString="datasource=10.1.4.123;port=3306;database=atm;username=root;password=alpha123" />
+    <add name="MYSQLConnection" connectionString="datasource=10.1.4.123;port=3306;database=atm;username=desarrolloJorge;password=desarrolloJorge" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
