Backend con módulo de seguridad

--- a/proyecto/Web.config
+++ b/proyecto/Web.config
@@ -17,7 +17,8 @@
   </appSettings>
   <connectionStrings>
     <add name="SQLConnection" connectionString="server=10.1.4.191;database=atm;user id=AlphaDesarrolloKioscos;password=AlphaDesarrolloKioscos" />
-    <add name="MYSQLConnection" connectionString="datasource=10.1.4.123;port=3306;database=atm;username=desarrolloJorge;password=desarrolloJorge" />
+    <add name="MYSQLConnection" connectionString="datasource=10.1.4.123;port=3306;database=atm;username=desarrolloDavid;password=desarrolloDavid" />
+    <add name="SQLConnectionSeguridad" connectionString="datasource=10.1.4.191;database=DB_Seguridad;username=AlphaDesarrolloKioscos;password=AlphaDesarrolloKioscos" />
     <!--<add name="MYSQLConnection" connectionString="Server=10.1.4.123;Port=3306;Database=atm;Uid=desarrolloDavid;Pwd=DesarrolloDavid;" />-->
   </connectionStrings>
   <system.web>
