--- a/proyecto/Web.config
+++ b/proyecto/Web.config
@@ -17,8 +17,8 @@
   </appSettings>
   <connectionStrings>
     <add name="SQLConnection" connectionString="server=10.1.4.191;database=atm;user id=AlphaDesarrolloKioscos;password=AlphaDesarrolloKioscos" />
-    <add name="MYSQLConnection" connectionString="datasource=10.1.4.123;port=3306;database=atm;username=desarrolloJorge;password=desarrolloJorge" />
-    <!--<add name="MYSQLConnection" connectionString="Server=10.1.4.123;Port=3306;Database=atm;Uid=desarrolloDavid;Pwd=DesarrolloDavid;" />-->
+    <!--<add name="MYSQLConnection" connectionString="datasource=10.1.4.123;port=3306;database=atm;username=desarrolloJorge;password=desarrolloJorge" />-->
+    <add name="MYSQLConnection" connectionString="Server=10.1.4.123;Port=3306;Database=atm;Uid=desarrolloDavid;Pwd=DesarrolloDavid;" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
